service discovery with k8

--- a/k8/visitor-app.yaml
+++ b/k8/visitor-app.yaml
@@ -1,24 +1,26 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: todo-deployment
+  name: visitor-app-deployment
 spec:
   replicas: 3
   template:
     metadata:
       labels:
-        app: todo-db
+        app: helloworld-db
     spec:
       containers:
       - name: k8s-todo
-        image: tshaiman/node-todo
-        command: ["npm", "start"]
+        image: tshaiman/hello-node
+        command: ["node", "server_db.js"]
         ports:
         - name: nodejs-port
           containerPort: 3000
         env:
           - name: MYSQL_HOST
             value: database-service
+          - name: PORT
+            value: "3000"
           - name: MYSQL_USER
             value: root
           - name: MYSQL_PASSWORD
