--- a/k8/database.yaml
+++ b/k8/database.yaml
@@ -1,34 +1,39 @@
-apiVersion: v1
-kind: Pod
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: database
   labels:
     app: database
 spec:
-  containers:
-  - name: mysql
-    image: mysql:5.7
-    ports:
-    - name: mysql-port
-      containerPort: 3306
-    env:
-      - name: MYSQL_ROOT_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: todo-secrets
-            key: rootPassword
-      - name: MYSQL_USER
-        valueFrom:
-          secretKeyRef:
-            name: todo-secrets
-            key: username
-      - name: MYSQL_PASSWORD
-        valueFrom:
-          secretKeyRef:
-            name: todo-secrets
-            key: password
-      - name: MYSQL_DATABASE
-        valueFrom:
-          secretKeyRef:
-            name: todo-secrets
-            key: database
+  template:
+    metadata:
+      labels:
+        app: helloworld-db
+    spec:
+      containers:
+      - name: mysql
+        image: mysql:5.7
+        ports:
+        - name: mysql-port
+          containerPort: 3306
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: helloworld-secrets
+                key: rootPassword
+          - name: MYSQL_USER
+            valueFrom:
+              secretKeyRef:
+                name: helloworld-secrets
+                key: username
+          - name: MYSQL_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: helloworld-secrets
+                key: password
+          - name: MYSQL_DATABASE
+            valueFrom:
+              secretKeyRef:
+                name: helloworld-secrets
+                key: database
