--- a/k8/secrets.yaml
+++ b/k8/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: todo-secrets
+  name: helloworld-secrets
 type: Opaque
 data:
   username: aGVsbG93b3JsZA==
