--- a/k8/visitor-app-service.yaml
+++ b/k8/visitor-app-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-db-service
+  name: visitor-app-service
+  labels:
+    app: helloworld-db
 spec:
   ports:
   - port: 3000
     protocol: TCP
   selector:
-    app: todo-db
+    app: helloworld-db
   type: NodePort
