--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.0.1",
     "express": "^4.16.4",
+    "js-yaml": "^3.12.2",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
